Remove nested-reset

--- a/app/assets/stylesheets/activeadmin-wysihtml5/base.css.sass
+++ b/app/assets/stylesheets/activeadmin-wysihtml5/base.css.sass
@@ -160,7 +160,7 @@ body.active_admin form
     +clearfix
 
   .activeadmin-wysihtml5
-    +nested-reset
+    // +nested-reset
     float: right
     width: 89%
 
