--- a/app/assets/stylesheets/activeadmin-wysihtml5/base.css.sass
+++ b/app/assets/stylesheets/activeadmin-wysihtml5/base.css.sass
@@ -2,7 +2,7 @@
 @import 'activeadmin-wysihtml5/icons'
 
 .wysihtml5-sandbox
-  +box-sizing(border-box)
+  //+box-sizing(border-box)
 
 #modal-overlay
   position: fixed
