rm linear-gradient

--- a/app/assets/stylesheets/activeadmin-wysihtml5/base.css.sass
+++ b/app/assets/stylesheets/activeadmin-wysihtml5/base.css.sass
@@ -182,7 +182,7 @@ body.active_admin form
 
         &> a,
         &> .blocks-selector
-          +linear-gradient(white, #E6E6E6)
+          //+linear-gradient(white, #E6E6E6)
           padding: 4px 10px
           display: inline-block
           line-height: 18px
