rm linear-gradient 2

--- a/app/assets/stylesheets/activeadmin-wysihtml5/base.css.sass
+++ b/app/assets/stylesheets/activeadmin-wysihtml5/base.css.sass
@@ -196,7 +196,7 @@ body.active_admin form
           position: relative
 
           &.wysihtml5-command-active, &.wysihtml5-action-active
-            +linear-gradient(darken(#E6E6E6, 10%), #E6E6E6)
+            //+linear-gradient(darken(#E6E6E6, 10%), #E6E6E6)
             box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.4)
 
           &:hover
